<resources>
    <string name="app_name"
        translatable="false">story</string>
    <string name="login"
        translatable="false">Login</string>
    <string name="register">Register</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="email"
        translatable="false">Email</string>
    <string name="password"
        translatable="false">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="wrong_email_or_password">Email or password is incorrect</string>
    <string name="general_error_title">Something went wrong</string>
    <string name="general_error_message">Please try it again later</string>
    <string name="close">Close</string>
    <string name="add_story">Add Story</string>
    <string name="logout"
        translatable="false">Logout</string>
    <string name="dismiss">Dismiss</string>
    <string name="agree">Agree</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="password_is_not_match">Password is not match</string>
    <string name="registration_success">Registration Successful</string>
    <string name="registration_success_desc">Your account has been created successfully. You can login now.</string>
    <string name="min_n_char">Min. %d characters</string>
    <string name="second_format">%ds</string>
    <string name="minute_format">%dm</string>
    <string name="hour_format">%dh</string>
    <string name="back">back</string>
    <string name="create_story">Create Story</string>
    <string name="story_detail_title">Story</string>
    <string name="add_new_story_description_hint">What\'s your story today?</string>
    <string name="add_image">add image</string>
    <string name="ask_permission_title">We Need Your Permission</string>
    <string name="ask_permission_description">To access some of our features, we need permissions to access your phone resources</string>
    <string name="ask_permission_primary_button">Go to setting</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="icon">icon</string>
    <string name="reload">Reload</string>
    <string name="image">image</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
</resources>