<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_story"
        style="@style/StoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_story_title_margin_top"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <id.andiwijaya.story.presentation.component.StoryTextInputLayout
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_email_edit_text_margin_horizontal"
        android:layout_marginBottom="@dimen/login_email_edit_text_margin_bottom"
        android:inputType="textEmailAddress"
        app:hint="@string/email"
        app:iconSrc="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <id.andiwijaya.story.presentation.component.StoryTextInputLayout
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_password_edit_text_margin_horizontal"
        android:layout_marginTop="@dimen/login_password_edit_text_margin_top"
        android:inputType="textPassword"
        app:hint="@string/password"
        app:iconSrc="@drawable/ic_password"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email"
        app:minChar="6" />

    <id.andiwijaya.story.presentation.component.StoryButton
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_button_margin_horizontal"
        android:layout_marginTop="@dimen/login_button_margin_top"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password" />

    <TextView
        android:id="@+id/tv_does_not_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_footer_margin_bottom"
        android:text="@string/do_not_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        style="@style/TextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_register_margin_start"
        android:layout_marginBottom="@dimen/login_footer_margin_bottom"
        android:paddingTop="@dimen/login_footer_padding_top"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_does_not_have_an_account" />

</androidx.constraintlayout.widget.ConstraintLayout>