<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <id.andiwijaya.story.presentation.component.StoryToolbar
            android:id="@+id/stb_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_story"
            style="@style/StoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_story_title_margin_top"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <id.andiwijaya.story.presentation.component.StoryTextInputLayout
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_name_edit_text_margin_horizontal"
            android:layout_marginTop="@dimen/login_email_edit_text_margin_bottom"
            android:inputType="textPersonName"
            app:hint="@string/name"
            app:iconSrc="@drawable/ic_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <id.andiwijaya.story.presentation.component.StoryTextInputLayout
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_email_edit_text_margin_horizontal"
            android:layout_marginTop="@dimen/register_email_edit_text_margin_top"
            android:inputType="textEmailAddress"
            app:hint="@string/email"
            app:iconSrc="@drawable/ic_email"
            app:layout_constraintTop_toBottomOf="@id/ed_register_name" />

        <id.andiwijaya.story.presentation.component.StoryTextInputLayout
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_password_edit_text_margin_horizontal"
            android:layout_marginTop="@dimen/register_password_edit_text_margin_top"
            android:inputType="textPassword"
            app:hint="@string/password"
            app:iconSrc="@drawable/ic_password"
            app:layout_constraintTop_toBottomOf="@id/ed_register_email"
            app:minChar="6" />

        <id.andiwijaya.story.presentation.component.StoryTextInputLayout
            android:id="@+id/ed_register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_password_edit_text_margin_horizontal"
            android:layout_marginTop="@dimen/register_password_edit_text_margin_top"
            android:inputType="textPassword"
            app:hint="@string/confirm_password"
            app:iconSrc="@drawable/ic_password"
            app:layout_constraintTop_toBottomOf="@id/ed_register_password"
            app:minChar="6" />

        <id.andiwijaya.story.presentation.component.StoryButton
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/register_button_margin_horizontal"
            android:layout_marginTop="@dimen/register_button_margin_top"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@id/ed_register_confirm_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>