<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/error_dialog_padding_start"
    android:paddingTop="@dimen/error_dialog_padding_top"
    android:paddingEnd="@dimen/error_dialog_padding_end"
    android:paddingBottom="@dimen/error_dialog_padding_bottom">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/error_dialog_close_button_padding"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/error_dialog_icon_padding"
        android:src="@drawable/ic_error_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_error_title"
        style="@style/ErrorTitleStyle"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/error_dialog_title_margin_start"
        android:layout_marginTop="@dimen/error_dialog_title_margin_top"
        android:text="@string/general_error_title"
        app:layout_constraintEnd_toStartOf="@id/iv_close"
        app:layout_constraintStart_toEndOf="@id/iv_icon"
        app:layout_constraintTop_toTopOf="@id/iv_icon" />

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/error_dialog_message_margin_start"
        android:text="@string/general_error_message"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_error_title" />

    <id.andiwijaya.story.presentation.component.StoryButton
        android:id="@+id/bt_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/error_dialog_primary_button_margin_top"
        android:text="@string/close"
        app:layout_constraintTop_toBottomOf="@id/tv_error_message" />

    <TextView
        android:id="@+id/bt_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dismiss"
        android:textColor="@color/main_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_primary" />

</androidx.constraintlayout.widget.ConstraintLayout>